# hive

./: .gitignore  ADVANCED_FEATURES_COMPLETE.md  CHANGELOG_BUILDERS.md  Cargo.toml  Dockerfile.build  FOR_BUILDERS.md  INTEGRATION_SUCCESS.md  README.md  REALITY_TESTING_SUMMARY.md  SCALING_ANALYSIS.md  SNAPSHOT_FLOW_ANALYSIS.md  TESTER_README.md  TESTING_WIZARD.md  config.mpesa.example.yaml  setup.sh  test-network.sh  test-snapshot-submission.sh  test_advanced_features.sh
.github/workflows/: release.yml
docs/: BUILDERS_GUIDE.md  MPESA_ADVANCED.md  MPESA_INTEGRATION.md  MULTI_LANGUAGE.md  QUICKSTART.md  REALITY_INTEGRATION.md  VIDEO_SCRIPT.md
examples/: test_reality.rs
examples/cloudy-deliveries/: config.yaml
src/: lib.rs  main.rs
src/bot/: conversation.rs  mod.rs
src/config/: mod.rs
src/dashboard/: mod.rs
src/handlers/: menu.rs  mod.rs  order.rs  voucher.rs
src/i18n/: mod.rs
src/network/: client.rs  identity.rs  mod.rs  service.rs  snapshot.rs  types.rs
src/payments/: b2c.rs  mod.rs  mpesa.rs  types.rs  webhook.rs
src/store/: mod.rs
src/vouchers/: mod.rs
static/: dashboard.html
templates/: community-store.yaml  customer-support.yaml  default.yaml  event-tickets.yaml  food-delivery-mpesa.yaml  food-delivery-swahili.yaml  food-delivery.yaml  real-estate.yaml  salon-booking.yaml  tutoring.yaml  voucher-store.yaml
