[package]
name = "hive"
version = "0.1.0"
edition = "2024"
description = "A WhatsApp bot framework for decentralized hosting on Reality Network"
license = "MIT"
repository = "https://github.com/reality-foundation/hive"

[dependencies]
# WhatsApp client
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-sqlite-storage = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }
wacore-binary = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "main" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Web dashboard
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Reality Network integration
reqwest = { version = "0.12", features = ["json"] }
secp256k1 = { version = "0.30", features = ["global-context"] }
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
rmp-serde = "1.3"

# Utils
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9"
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
image = "0.25"
tempfile = "3.14"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
